app1/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: 282527170177.dkr.ecr.us-east-1.amazonaws.com/promodemoapp:5788bf169a9b638355c01b093a8454c81029669f
        name: app1
        ports:
        - containerPort: 80
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
