app1/app1b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1b
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: app1b
  template:
    metadata:
      labels:
        app: app1b
    spec:
      containers:
      # Comment TEST 1
      - name: app1b-ctr
        image: busybox:stable-glibc@sha256:50aa4698fa6262977cff89181b2664b99d8a56dbca847bf62f2ef04854597cf8
        args:
        - sleep
        - "3600"
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        # capabilities:
        #   drop:
        #     - ALL
        #   add:
        #     - NET_RAW
