app1/app1-default-deny-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: app1
spec:
  podSelector:
    app: app1
  policyTypes:
  - Ingress
  - Egress
